Adapt fix for 77 and 135 to Java 11
The previous improvements and bug-fixes were using features of Java 17.

The most useful are fixes for:
- https://github.com/PANTHEONtech/lighty-yang-validator/issues/77
- https://github.com/PANTHEONtech/lighty-yang-validator/issues/135

We would like to use them anyway.

Adapt Java 17 language features to Java 11 in 16.x branch.

Signed-off-by: Ivan Hrasko <ivan.hrasko@pantheon.tech>